# syslog-ng

./: .travis.yml  Makefile.am  configure.ac
lib/: cfg-lexer.h  cfg.c  cfg.h  logmatcher.c  logwriter.c  mainloop.c  persist-state.c
lib/eventlog/src/: evtctx.c
lib/filter/: filter-netmask.c  filter-netmask6.c  filter-re.c
lib/filter/tests/: test_filters.c  test_filters_netmask6.c
lib/template/tests/: test_template.c  test_template_speed.c
libtest/: Makefile.am  mock-transport.c  mock-transport.h  template_lib.c  testutils.c  testutils.h
modules/: CMakeLists.txt  Makefile.am
modules/afamqp/: afamqp.c
modules/cef/tests/: test-format-cef-extension.c
modules/date/: date-parser.c
modules/diskq/: logqueue-disk.c  qdisk.c
modules/diskq/tests/: test_diskq.c
modules/json/tests/: test_format_json.c
modules/kvformat/tests/: test_format_welf.c
modules/stardate/tests/: test_stardate.c
modules/system-source/: system-source.c
modules/testdst/: CMakeLists.txt  Makefile.am  libcurl.c  libcurl.h  testdst-grammar.ym  testdst-parser.c  testdst-parser.h  testdst-plugin.c  testdst.c  testdst.h
syslog-ng/: main.c
tests/unit/: test_matcher.c  test_persist_state.c
